modify optional and spring boot